--- a/actions.yaml
+++ b/actions.yaml
@@ -25,7 +25,7 @@ run:
       required: [run]
 
 # supported by ServiceCharm
-restart:
+service-restart:
   description: Restart services.
   params:
     force:
@@ -37,7 +37,7 @@ restart:
       type: boolean
       default: false
 
-set-sync-status:
+service-set-sync-status:
   description: Set sync status (debugging).
   params:
     key:
@@ -47,10 +47,10 @@ set-sync-status:
       description: Sync status.
       type: boolean
 
-start:
+service-start:
   description: Start services.
 
-stop:
+service-stop:
   description: Stop services.
   params:
     force:
@@ -58,7 +58,7 @@ stop:
       type: boolean
       default: false
 
-sync:
+service-sync:
   description: Sync configuration.
   params:
     force:
