Use pip for hpct libraries instead of vendoring

--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -13,9 +13,6 @@ bases:
 parts:
   charm:
     override-build: |
-      # vendor packages
+      # ensure git is available
       git --version || apt install -y git
-      rm -rf src/vendor hpctlib
-      mkdir -p src/vendor
-      (cd src/vendor; git clone https://github.com/j4m-can/hpct-library.git; cd ..; ln -sf vendor/hpct-library/lib/hpctlib .)
       craftctl default
